2013-03-15  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/ldsodefs.h
	(_dl_non_dynamic_init, _dl_aux_init): Move declarations to ...
	* sysdeps/generic/ldsodefs.h: ... here.

2013-03-15  Thomas Schwinge  <thomas@codesourcery.com>

	* math/libm-test.inc (ldexp_test): Add missing START/END markers.

	* sysdeps/powerpc/fpu/test-powerpc-snan.c: Rename to
	math/test-snan.c.
	* math/test-snan.c: Renamed from
	sysdeps/powerpc/fpu/test-powerpc-snan.c.
	* math/Makefile (tests): Add test-snan.
	* sysdeps/powerpc/fpu/Makefile (libm-tests): Don't add
	test-powerpc-snan.

	* math/basic-test.c (TEST_FUNC): Replace NANFUNC argument with
	SUFFIX.  Initialize qNaN_var with __builtin_nan family of
	functions.
	(TEST_TRUNC): Add SUFFIX argument.  Initialize qNaN_var with
	__builtin_nan family of functions.
	* math/libm-test.inc (initialize): Initialize qnan_value with
	__builtin_nan family of functions.
	* sysdeps/powerpc/fpu/test-powerpc-snan.c (SNANf, SNAN, SNANl):
	Remove variables.
	(init_signaling_nan, snan_float, snan_double, snan_ldouble):
	Remove functions.
	(TEST_FUNC): Add SUFFIX argument.  Move sNaN_var into static
	storage class.  Initialize qNaN_var and sNaN_var with
	__builtin_nan and __builtin_nans families of functions,
	respectively.

	* math/libm-test.inc (acosh_test): Also test with qNaN input.
	(sqrt_test): Remove duplicate test with qNaN input.
	(lrint_test, llrint_test, lround_test, llround_test, rint_test)
	(round_test, signbit_test, significand_test): Note missing +/-Inf
	as well as qNaN tests.

	* math/basic-test.c (TEST_FUNC, TEST_TRUNC): Rename NaN_var to
	qNaN_var.  Fix a few strings, too.
	* math/libm-test.inc (nan_value): Rename to qnan_value.
	* math/gen-libm-test.pl (%beautify): Adjust to that.
	* math/bits/mathcalls.h (nan): Refer to qNaN instead of NaN.
	* math/test-misc.c (main): Likewise.
	* sysdeps/ieee754/bits/nan.h (__nan_bytes, __nan_union): Rename
	to __qnan_bytes, and __qnan_union, respectively.